--- a/wp-content/languages/zh_TW.po
+++ b/wp-content/languages/zh_TW.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EGG website\n"
 "POT-Creation-Date: 2015-12-22 22:19+0800\n"
-"PO-Revision-Date: 2015-12-22 22:19+0800\n"
+"PO-Revision-Date: 2016-01-04 00:10+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
@@ -37,7 +37,7 @@ msgstr "展開更多細節"
 
 #: ../themes/egg/templates/content-careers.php:51
 msgid "Shop Recruitment"
-msgstr "商店空缺"
+msgstr "門市空缺"
 
 #: ../themes/egg/templates/content-collection.php:36
 msgid "SEE THE COLLECTION"
