--- a/wp-content/languages/zh_TW.po
+++ b/wp-content/languages/zh_TW.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: EGG website\n"
 "POT-Creation-Date: 2015-12-22 22:19+0800\n"
-"PO-Revision-Date: 2016-01-04 00:10+0800\n"
+"PO-Revision-Date: 2016-01-10 22:47+0800\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_TW\n"
@@ -57,7 +57,7 @@ msgstr "eGG*分店網絡"
 
 #: ../themes/egg/templates/content-eggstar-product.php:14
 msgid "Back to eGG*"
-msgstr "返回eGG*系列"
+msgstr "返回eGG*眼鏡系列"
 
 #: ../themes/egg/templates/content-eggstar-product.php:121
 #: ../themes/egg/templates/content-product.php:120
